# python-librespot

./: .gitignore  Cargo.toml  README.md
examples/: play.py
src/: lib.rs  metadata.rs  player.rs  session.rs  webtoken.rs
