[package]
name = "python-librespot"
version = "0.1.0"
authors = ["Paul Lietar <paul@lietar.net>"]

[lib]
name = "librespot"
crate-type = ["cdylib"]

[dependencies]
tokio-core = "0.1"
futures = "0.1"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]

[dependencies.librespot]
git = "https://github.com/e-ru/librespot.git"
branch = "send"
default-features = false
features = ["with-tremor"]
